--- a/auth/package.json
+++ b/auth/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "nodemon --config nodemon.json src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^18.7.14",
     "express": "^4.18.1",
-    "ts-node-dev": "^2.0.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0-0",
     "typescript": "^4.8.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
