--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: auth-depl
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: auth
@@ -14,12 +15,6 @@ spec:
       containers:
         - name: auth
           image: raoadeelnasir/auth
-          resources:
-            limits:
-              memory: '128Mi'
-              cpu: '500m'
-          ports:
-            - containerPort: 4000
 ---
 apiVersion: v1
 kind: Service
