--- a/auth/package.json
+++ b/auth/package.json
@@ -13,11 +13,13 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.14",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0-0",
     "typescript": "^4.8.2"
   },
   "devDependencies": {
+    "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.19"
   }
 }
