--- a/auth/package.json
+++ b/auth/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/express-validator": "^3.0.0",
     "@types/node": "^18.7.14",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "morgan": "^1.10.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0-0",
