--- a/auth/package.json
+++ b/auth/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "@types/express-validator": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.14",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0-0",
