--- a/auth/package.json
+++ b/auth/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.8.2"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.44",
     "@types/morgan": "^1.9.3",
     "nodemon": "^2.0.19"
   }
