--- a/auth/package.json
+++ b/auth/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --config nodemon.json src/server.ts"
+    "dev": "nodemon --config nodemon.json src/server.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -23,13 +31,19 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0-0",
     "typescript": "^4.8.2"
   },
   "devDependencies": {
     "@types/cookie-session": "^2.0.44",
+    "@types/jest": "^29.0.1",
     "@types/morgan": "^1.9.3",
-    "nodemon": "^2.0.19"
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.0.3",
+    "mongodb-memory-server": "^8.9.1",
+    "supertest": "^6.2.4",
+    "ts-jest": "^29.0.0"
   }
 }
