--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -1,37 +1,35 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-depl
+  name: client-depl
 spec:
-  replicas: 1
   selector:
     matchLabels:
-      app: auth
+      app: client
   template:
     metadata:
       labels:
-        app: auth
+        app: client
     spec:
       containers:
-        - name: auth
-          image: raoadeelnasir/auth
+        - name: client
+          image: raoadeelnasir/client
           env:
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-srv
+  name: client-srv
 spec:
   selector:
-    app: auth
+    app: client
   ports:
     - port: 3000
-      name: auth
-      protocol: TCP
       targetPort: 3000
+      protocol: TCP
+      name: client
