--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -18,4 +18,11 @@ spec:
               service:
                 name: auth-srv
                 port:
-                  number: 4000
+                  number: 3000
+          - pathType: Prefix
+            path: /?(.*)
+            backend:
+              service:
+                name: client-srv
+                port:
+                  number: 3000
