--- a/auth/package.json
+++ b/auth/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@adcommon/common": "^1.0.3",
     "@types/express": "^4.17.13",
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.9",
@@ -31,7 +32,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
-    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0-0",
     "typescript": "^4.8.2"
   },
@@ -44,6 +44,7 @@
     "mongodb-memory-server": "^8.9.1",
     "nodemon": "^2.0.19",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.0.2"
+    "ts-jest": "^27.0.2",
+    "ts-node": "^10.9.1"
   }
 }
