--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,6 +8,14 @@ build:
   local:
     push: false
   artifacts:
+    - image: raoadeelnasir/tickets
+      context: tickets
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - dest: .
+            src: 'src/**/*ts'
     - image: raoadeelnasir/auth
       context: auth
       docker:
