--- a/tickets/package.json
+++ b/tickets/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0-0",
     "typescript": "^4.8.2"
   },
