orders microservice skaffolded

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -20,16 +20,23 @@ spec:
                 port:
                   number: 3000
           - pathType: Prefix
-            path: /?(.*)
-            backend:
-              service:
-                name: client-srv
-                port:
-                  number: 3000
-          - pathType: Prefix
             path: /api/tickets/?(.*)
             backend:
               service:
                 name: tickets-srv
+                port:
+                  number: 3000
+          - pathType: Prefix
+            path: /api/orders/?(.*)
+            backend:
+              service:
+                name: orders-srv
+                port:
+                  number: 3000
+          - pathType: Prefix
+            path: /?(.*)
+            backend:
+              service:
+                name: client-srv
                 port:
                   number: 3000
