verision to avoid concurrency issue

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -38,5 +38,5 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: '**/*.js'
+          - src: 'src/**/*.ts'
             dest: .
