--- a/tickets/package.json
+++ b/tickets/package.json
@@ -24,13 +24,16 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.7.14",
+    "@types/npm": "^7.19.0",
     "cookie-session": "^2.0.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.2",
+    "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
+    "mongoose-update-if-current": "^1.4.0",
     "morgan": "^1.10.0",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0-0",
