--- a/infra/k8s/orders-depl.yaml
+++ b/infra/k8s/orders-depl.yaml
@@ -12,7 +12,7 @@ spec:
         app: orders
     spec:
       containers:
-        - name: tickets
+        - name: orders
           image: raoadeelnasir/orders
           env:
             - name: MONGO_URI
