--- a/infra/k8s/payaments-mongo-depl.yaml
+++ b/infra/k8s/payaments-mongo-depl.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tickets-mongo-depl
+  name: payments-mongo-depl
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: tickets-mongo
+      app: payments-mongo
   template:
     metadata:
       labels:
-        app: tickets-mongo
+        app: payments-mongo
     spec:
       containers:
-        - name: tickets-mongo
+        - name: payments-mongo
           image: mongo
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: tickets-mongo-srv
+  name: payments-mongo-srv
 spec:
   selector:
-    app: tickets-mongo
+    app: payments-mongo
   ports:
     - port: 27017
       targetPort: 27017
-      name: tickets-mongo
+      name: payments-mongo
       protocol: TCP
